# fakerosoft-memes

./: .gitignore  CMakeLists.txt  Main.qml  README.md  auth.h  main.cpp  users.cpp
build-semesteroppgave_gui-Desktop_Qt_6_5_2_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  appsemesteroppgave_gui.exp  appsemesteroppgave_gui.ilk  appsemesteroppgave_gui.lib  appsemesteroppgave_gui_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-semesteroppgave_gui-Desktop_Qt_6_5_2_MSVC2019_64bit-Debug/.qt/: QtDeploySupport.cmake
build-semesteroppgave_gui-Desktop_Qt_6_5_2_MSVC2019_64bit-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_appsemesteroppgave_gui.cmake  Qt6_QmlPlugins_Imports_appsemesteroppgave_gui.rsp
build-semesteroppgave_gui-Desktop_Qt_6_5_2_MSVC2019_64bit-Debug/.rcc/: appsemesteroppgave_gui_raw_qml_0.qrc  qmake_semesteroppgave_gui.qrc  qrc_appsemesteroppgave_gui_raw_qml_0.cpp  qrc_qmake_semesteroppgave_gui.cpp
build-semesteroppgave_gui-Desktop_Qt_6_5_2_MSVC2019_64bit-Debug/appsemesteroppgave_gui_autogen/: deps  mocs_compilation.cpp
build-semesteroppgave_gui-Desktop_Qt_6_5_2_MSVC2019_64bit-Debug/meta_types/: appsemesteroppgave_gui_json_file_list.txt  appsemesteroppgave_gui_json_file_list.txt.timestamp  (+1 more)
build-semesteroppgave_gui-Desktop_Qt_6_7_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  qtcsettings.cmake
semesteroppgave_gui/: CMakeLists.txt  Main.qml  auth.cpp  auth.h  main.cpp  users.cpp  users.h
semesteroppgave_gui/defaultpage/: StartPage.qml
semesteroppgave_gui/defaultpage/AdminComponents/: ActiveUsers.qml
semesteroppgave_gui/defaultpage/AdminComponents/AdminButtons/: AdminCreateUserButton.qml  AdminEditButton.qml
semesteroppgave_gui/defaultpage/StudentButtons/: StudentTakeTest.qml
semesteroppgave_gui/defaultpage/StudentComponents/StudentButtons/: StudentViewGrades.qml
semesteroppgave_gui/login/: LoginPage.qml
(+368 files in other folders)
